node/orchestra/tests/ui/err-03-subsys-twice.stderr
error: Duplicate subsystem names
  --> tests/ui/err-03-subsys-twice.rs:25:8
   |
25 |     sub1: AwesomeSubSys,
   |           ^^^^^^^^^^^^^

error: previously defined here.
  --> tests/ui/err-03-subsys-twice.rs:22:8
   |
22 |     sub0: AwesomeSubSys,
   |           ^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `Orchestra`
  --> tests/ui/err-03-subsys-twice.rs:34:18
   |
34 |     let orchestra = Orchestra::<_,_>::builder()
   |                     ^^^^^^^^^ use of undeclared type `Orchestra`
